helm/back-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: backend
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: fineract-rest
    app.kubernetes.io/version: 1.0.3
    app_name: fineract-rest
  name: backend-fineract-rest
  namespace: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: backend
      app.kubernetes.io/name: fineract-rest
      app_name: fineract-rest
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: backend
        app.kubernetes.io/name: fineract-rest
        app_name: fineract-rest
    spec:
      containers:
      - env:
        - name: PLACEHOLDER
          value: TEST
        - name: FF4J_FILE_NAME
          value: ff4j-feature-moniafrica.yml
        - name: FINERACT_DEFAULT_TENANTDB_DESCRIPTION
          value: FB Default Tenant
        - name: FINERACT_DEFAULT_TENANTDB_IDENTIFIER
          value: default
        - name: FINERACT_DEFAULT_TENANTDB_NAME
          value: fineract_default
        - name: FINERACT_DEFAULT_TENANTDB_PORT
          value: "3306"
        - name: FINERACT_DEFAULT_TENANTDB_TIMEZONE
          value: America/Guatemala
        - name: FINERACT_HIKARI_AUTO_COMMIT
          value: "true"
        - name: FINERACT_HIKARI_CONNECTION_TIMEOUT
          value: "300000"
        - name: FINERACT_HIKARI_DRIVER_SOURCE_CLASS_NAME
          value: com.mysql.cj.jdbc.Driver
        - name: FINERACT_HIKARI_DS_PROPERTIES_CACHE_PREP_STMTS
          value: "true"
        - name: FINERACT_HIKARI_DS_PROPERTIES_CACHE_RESULT_SET_METADATA
          value: "true"
        - name: FINERACT_HIKARI_DS_PROPERTIES_CACHE_SERVER_CONFIGURATION
          value: "true"
        - name: FINERACT_HIKARI_DS_PROPERTIES_DUMP_QUERIES_IN_EXCEPTION
          value: "true"
        - name: FINERACT_HIKARI_DS_PROPERTIES_ELIDE_SET_AUTO_COMMITS
          value: "true"
        - name: FINERACT_HIKARI_DS_PROPERTIES_LOG_SLOW_QUERIES
          value: "true"
        - name: FINERACT_HIKARI_DS_PROPERTIES_MAINTAIN_TIME_STATS
          value: "false"
        - name: FINERACT_HIKARI_DS_PROPERTIES_PREP_STMT_CACHE_SIZE
          value: "250"
        - name: FINERACT_HIKARI_DS_PROPERTIES_PREP_STMT_CACHE_SQL_LIMIT
          value: "2048"
        - name: FINERACT_HIKARI_DS_PROPERTIES_REWRITE_BATCHED_STATEMENTS
          value: "true"
        - name: FINERACT_HIKARI_DS_PROPERTIES_USE_LOCAL_SESSION_STATE
          value: "true"
        - name: FINERACT_HIKARI_DS_PROPERTIES_USE_SERVER_PREP_STMTS
          value: "true"
        - name: FINERACT_HIKARI_IDLE_TIMEOUT
          value: "120000"
        - name: FINERACT_HIKARI_MAXIMUM_POOL_SIZE
          value: "20"
        - name: FINERACT_HIKARI_MINIMUM_IDLE
          value: "1"
        - name: FINERACT_HIKARI_TEST_QUERY
          value: SELECT 1
        - name: FINERACT_SERVER_PORT
          value: "8443"
        - name: FINERACT_SERVER_SSL_ENABLED
          value: "true"
        - name: TZ
          value: UTC
        - name: FINERACT_DEFAULT_TENANTDB_HOSTNAME
          value: "fiter-frenbr-dev.cd935ealbyrb.us-east-2.rds.amazonaws.com"
        - name: FINERACT_DEFAULT_TENANTDB_PWD
          value: "3sDPhaeU3C6n"
        - name: FINERACT_HIKARI_JDBC_URL
          value: "jdbc:mysql://fiter-frenbr-dev.cd935ealbyrb.us-east-2.rds.amazonaws.com:3306/fineract_tenants"
        - name: FINERACT_HIKARI_PASSWORD
          value: "DLETiAndEReC"
        - name: FINERACT_HIKARI_USERNAME
          value: "admin"
        - name: FINERACT_DEFAULT_TENANTDB_UID
          value: "admin"
        
        image: 640827980753.dkr.ecr.us-east-2.amazonaws.com/dev-backend:6f192ff
        imagePullPolicy: IfNotPresent
        name: fineract-rest
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8443
          name: job-port
          protocol: TCP
        resources:
          limits:
            cpu: 2048m
            memory: 3096Mi
          requests:
            cpu: 1024m
            memory: 2Gi
        securityContext: {}
        volumeMounts:
        - mountPath: /app/resources/logback.xml
          name: config
          readOnly: true
          subPath: logback.xml
      securityContext: {}
      serviceAccount: application-sa
      volumes:
      - configMap:
          defaultMode: 420
          items:
          - key: logback.xml
            path: logback.xml
          name: backend-fineract-rest-mount
        name: config
