helm/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: frontend
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: fineract-ui
    app.kubernetes.io/version: 1.0.3
    app_name: fineract-ui
  name: frontend-fineract-ui
  namespace: application
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: frontend
      app.kubernetes.io/name: fineract-ui
      app_name: fineract-ui
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: frontend
        app.kubernetes.io/name: fineract-ui
        app_name: fineract-ui
    spec:
      containers:
      - args:
        - /bin/bash
        - -c
        - envsubst < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf
          && nginx -g 'daemon off;'
        image: 640827980753.dkr.ecr.us-east-2.amazonaws.com/dev-frontend:fa95553
        imagePullPolicy: IfNotPresent
        name: fineract-ui
        ports:
        - containerPort: 443
          name: https
          protocol: TCP
        - containerPort: 80
          name: http
          protocol: TCP
        resources:   
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: 512m
            memory: 512Mi
        securityContext: {}
        volumeMounts:
        - mountPath: /etc/ssl/keys/cert.pem
          name: secretmount
          readOnly: true
          subPath: cert.pem
        - mountPath: /etc/ssl/keys/key.pem
          name: secretmount
          readOnly: true
          subPath: key.pem
        - mountPath: /etc/nginx/conf.d/default.conf.template
          name: secretmount
          readOnly: true
          subPath: default.conf.template
      securityContext: {}
      serviceAccount: application-sa
      volumes:
      - name: secretmount
        secret:
          defaultMode: 420
          items:
          - key: cert.pem
            path: cert.pem
          - key: key.pem
            path: key.pem
          - key: default.conf.template
            path: default.conf.template
          secretName: fineract-ui-secret
