helm/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: frontend
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: fineract-ui
    app.kubernetes.io/version: 1.0.3
    app_name: fineract-ui
  name: frontend-fineract-ui
  namespace: application
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/instance: frontend
    app.kubernetes.io/name: fineract-ui
    app_name: fineract-ui
  type: ClusterIP
