helm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-issuer
    meta.helm.sh/release-name: frontend
    meta.helm.sh/release-namespace: application
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
  labels:
    app.kubernetes.io/instance: frontend
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: fineract-ui
    app.kubernetes.io/version: 1.0.3
    app_name: fineract-ui
  name: frontend-fineract-ui
  namespace: application
spec:
  ingressClassName: nginx
  rules:
  - host: a6761ff9fa5284548a6d8ab002973574-733225307.us-east-2.elb.amazonaws.com #must be edited
    http:
      paths:
      - backend:
          service:
            name: frontend-fineract-ui
            port:
              number: 443
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - a6761ff9fa5284548a6d8ab002973574-733225307.us-east-2.elb.amazonaws.com #must be edited
    secretName: fineract-tls
